--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="lead">Welcome to my Home page. My name is Junior Mejia Vasquez I am a full time student and I work overnights at Lowes as a stocker/receiver. I was majoring as a computer science major but after this semester I will be changing majors to computer Engineering. I live with my mom and my puppy name ranger. I have had ranger for about 4 months now.</p>
       </div>
       <div class="col-md-5">
-        <img src="lol" alt="Junior Mejia" width="400" height="400">
+        <img src="lol." alt="Junior Mejia" width="400" height="400">
 
       </div>
     </div>
