--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         and I also like to socialize. Playing video games helps me out mentally but at the same time it makes me rage LOL.</p>
       </div>
       <div class="col-md-5">
-        <img src="Junior.jpg" alt="Junior Mejia" width="400" height="400">
+        <img src="lol.jpg" alt="Junior Mejia" width="400" height="700">
 
       </div>
     </div>
