--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">A LITTLE ABOUT <span class="text-muted">ME.</span></h2>
-        <p class="lead">Welcome to my Home page. My name is Junior Mejia Vasquez I am a full time student and I work overnights at Lowes as a stocker/receiver. I was majoring as a computer science major but after this semester I will be changing majors to computer Engineering. I live with my mom and my puppy name ranger. I have had ranger for about 4 months now. I like playing video games
-        and I also like to socialize. Playing video games helps me out mentally but at the same time it makes me rage LOL.</p>
+        <p class="lead">Welcome to my Home page. My name is Junior Mejia Vasquez I am a full time student and I work overnights at Lowes as a stocker/receiver. I was majoring as a computer science major but after this semester I will be changing majors to computer Engineering. I live with my mom and my puppy name ranger. I have had ranger for about 4 months now. I like playing video games and I also like to socialize. Playing video games helps me out mentally but at the same time it makes me rage LOL.</p>
       </div>
       <div class="col-md-5">
         <img src="lol.jpg" alt="Junior Mejia" width="400" height="700">
