--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Created by <a href="mailto:r.allen@csulb.edu">Junior Mejia</a> -  <a href="https://www.csulb.edu/college-of-engineering/roni-allen" target="_blank">Student</a></p><p>Last updated on 4-29-21</p>
+  <p>Created by <a href="mailto:r.allen@csulb.edu">Junior Mejia</a> -  <a href="https://www.csulb.edu/college-of-engineering/roni-allen" 
     <i class="fas fa-chalkboard-teacher" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
 </div>
     </div>
